# toddgpt

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .typos.toml  Dockerfile  LICENSE  README.md  input_examples.py  main.py  pyproject.toml  roadmap.md  run-docker.sh  test.py
.circleci/: config.yml
.github/workflows/: code-coverage.yaml
geoms/: h2o.xyz
src/toddgpt/: agent.py  chemcloud_api.py  chemcloud_tool.py  prompt.py  qm.py  terachem_input_analyzer.py
src/toddgpt/calculators/: mace_calc.py
src/toddgpt/tools/: datatypes.py  geom_reporter.py  input_examples.py  interface.py  schemas.py
tc-inp/: geom.xyz  minimize.in  starting-geom.xyz
tests/: __init__.py  conftest.py  test_agent.py  test_geom_reporter.py  test_import.py  test_mace_calc.py  test_terachem_input_analyzer.py
tests/chemcloud_api/: conftest.py  test_chemcloud_api.py
