[tool.poetry]
name = "toddgpt"
version = "0.1.0"
description = "A LLM-agent for excited state chemistry simulations"
authors = ["pablo unzueta <punzu001@ucr.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.2.14"
openai = "^1.41.0"
langchain-openai = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
