[tool.poetry]
name = "toddgpt"
version = "0.1.0"
description = "A LLM-agent for excited state chemistry simulations"
authors = ["pablo unzueta <punzu001@ucr.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
openai = "^1.41.0"
ase = "^3.23.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
langchain = "^0.2.14"
langchain-core = "^0.2.33"
langchain-openai = "^0.1.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]