[tool.poetry]
name = "toddgpt"
version = "0.1.0"
description = "A LLM-agent for excited state chemistry simulations"
authors = ["pablo unzueta <punzu001@ucr.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
openai = "^1.41.0"
ase = "^3.23.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
langchain = "^0.2.14"
langchain-core = "^0.2.33"
langchain-openai = "^0.1.22"
pre-commit = "^3.8.0"
ruff = "^0.6.1"
types-requests = "^2.32.0.20240712"
mypy = "^1.11.1"
isort = "^5.13.2"
chemcloud = "^0.12.0"
qcparse = "^0.6.2"
qcop = "^0.8.1"
qcio = {git = "https://github.com/pablo-unzueta/qcio"}
mace-torch = "^0.3.6"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
]